--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,72 @@
+@import url("https://fonts.googleapis.com/css?family=Fredericka+the+Great|Martel+Sans&display=swap");
 body {
-  background: red;
+  background-color: #b4ffd8;
+  text-align: center;
+  margin: 0;
+}
+
+.horisontal-line {
+  height: 60px;
+  opacity: 0.7;
+  background-color: #b4ffd8;
+}
+
+.white-bg-trnsp {
+  background-color: white;
+  padding: 40px 50px;
+}
+
+.container-header {
+  text-transform: uppercase;
+  font-size: 30px;
+  font-family: 'Martel Sans', sans-serif;
+  color: #93A7AB;
+}
+
+.text {
+  font-family: 'Martel Sans', sans-serif;
+  color: #121645;
+  font-size: 18px;
+}
+
+.container {
+  margin: 0 auto;
+  width: 90%;
+  padding: 70px 30px;
+}
+
+#navigation-bar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #b4ffd8;
+}
+
+#navigation-bar li {
+  float: left;
+}
+
+#navigation-bar li a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+  font-family: "Fredericka the Great", cursive;
+  text-transform: uppercase;
+  color: #121645;
+  font-size: 26px;
+}
+
+#navigation-bar li a:hover {
+  background-color: #84dcc6;
+}
+
+.home, .aboutme, .technology, .contact {
+  background-image: url("../img/6.jpg");
+  background-repeat: no-repeat, repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  opacity: 0.9;
 }
 /*# sourceMappingURL=style.css.map */
