--- a/css/style.sass
+++ b/css/style.sass
@@ -116,12 +116,12 @@ body
 
 
 // FORM
-#single-form
+.single-form
    width: 500px
    text-align: left
    margin: 0 auto
 
-#single-form input[type=text], select, textarea 
+.single-form input[type=text], select, textarea 
   width: 100%
   padding: 12px
   border: 1px solid #ccc
@@ -132,11 +132,11 @@ body
   resize: vertical
   font-family: 'Martel Sans', sans-serif
 
-#single-form label 
+.single-form label 
    @include font-small
    font-weight: 300
 
-#single-form input[type=submit] 
+.single-form input[type=submit] 
    background-color: $color-indigo
    color: white
    padding: 12px 20px
@@ -144,7 +144,7 @@ body
    border-radius: 4px
    cursor: pointer
    
-#single-form input[type=submit]:hover 
+.single-form input[type=submit]:hover 
   background-color: $color-gray
 
 
