--- a/css/style.sass
+++ b/css/style.sass
@@ -182,3 +182,20 @@ blockquote
    border-left: 5px solid $color-gray
    padding-left: 10px
    margin: 10px;
+
+
+
+
+
+.blue-container
+   height: 100vh
+   display: flex
+   justify-content: center
+   align-items: center
+   background-color: white
+
+.square
+   margin: 0 10px
+   height: 100px
+   width: 100px
+   background-color: deepskyblue
