--- a/css/style.sass
+++ b/css/style.sass
@@ -67,7 +67,7 @@ body
 
 .white-bg-trnsp 
    padding: 40px 50px
-   background: white
+   background: #edf1ef
    // background-image: url("../img/other/6.jpg")
    background-repeat: repeat repeat
    background-size: cover
@@ -148,13 +148,21 @@ body
    background-size: cover;
 
 #home-hdr
-   
+   padding-top: 250px
+
+#home-hdr-1, #home-hdr-2
+   font-weight: 300
+   text-transform: uppercase
+   font-family: $font-fredericka
 
 #home-hdr-1
-
+   color: $color-indigo
+   font-size: 60px
+   margin-bottom: 0
 
 #home-hdr-2
-
+   color: $color-dark-green
+   font-size: 26px
 
 // FORM
 .single-form
